--- a/src/Core/composer.json
+++ b/src/Core/composer.json
@@ -117,6 +117,7 @@
         "symfony/psr-http-message-bridge": "~2.1.3",
         "symfony/rate-limiter": "~6.1.0",
         "symfony/routing": "~6.1.0",
+        "symfony/runtime": "~6.1.0",
         "symfony/security-core": "~6.1.0",
         "symfony/serializer": "~6.1.0",
         "symfony/service-contracts": "~3.1.0",
