--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -23,13 +23,13 @@
     "unit-watch": "jest --config jest.config.js --watch",
     "test-debug": "node --inspect-brk TZ=UTC node_modules/.bin/jest --watch --config jest.config.js --runInBand --no-cache",
     "lint:all": "npm run lint:types && npm run lint",
-    "lint": "eslint --ext .js,.ts,.vue,.html.twig src test",
+    "lint": "eslint --ext .js,.ts,.vue,.html.twig src test --cache",
     "lint:fix": "npm run lint -- --fix",
     "lint:types": "tsc",
     "lint:twig": "eslint --ext .html.twig src",
     "lint:junit": "eslint --ext .js,.ts,.vue,.html.twig --format junit src test > eslint.junit.xml",
     "lint-fix": "eslint --fix --ext .js,.vue,.html.twig src test",
-    "lint:scss": "stylelint **/*.scss",
+    "lint:scss": "stylelint **/*.scss --cache",
     "lint:scss-fix": "npm run lint:scss -- --fix",
     "lint:deprecations": "eslint --rule '\"sw-new-core-rules/private-feature-declarations\": \"error\"' $(git status -s | awk '/(js|ts|vue|html\\.twig)$/ {print $2}')",
     "security-check": "./node_modules/.bin/nsp check",
