--- a/.github/workflows/01-lint-storefront.yml
+++ b/.github/workflows/01-lint-storefront.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - trunk
+    paths:
+      - src/Storefront/Resources/app/storefront/**/*
   pull_request:
     paths:
       - src/Storefront/Resources/app/storefront/**/*
@@ -22,10 +24,28 @@ jobs:
         with:
           node-version: 16
 
-      - name: NPM Setup
-        run: |
-          cd src/Storefront/Resources/app/storefront
-          npm clean-install
+      - name: Retrieve the cached "node_modules" directory (if present)
+        uses: actions/cache@v2
+        id: node-cache
+        with:
+          path: src/Storefront/Resources/app/storefront/node_modules
+          key: storefront-node-modules-${{ runner.os }}-${{ hashFiles('src/Storefront/Resources/app/storefront/package-lock.json') }}
+
+      - name: Install dependencies (if the cached directory was not found)
+        if: steps.node-cache.outputs.cache-hit != 'true'
+        run: npm --prefix src/Storefront/Resources/app/storefront ci
+
+      - name: Cache ESLint
+        uses: actions/cache@v2
+        with:
+          path: src/Storefront/Resources/app/storefront/node_modules/.eslintcache
+          key: storefront-eslint-${{ runner.os }}
+
+      - name: Cache Stylelint
+        uses: actions/cache@v2
+        with:
+          path: src/Storefront/Resources/app/storefront/node_modules/.stylelintcache
+          key: storefront-stylelint-${{ runner.os }}
 
       - name: Check Code
         run: |
