--- a/.gitlab/stages/10-lint.yml
+++ b/.gitlab/stages/10-lint.yml
@@ -1,5 +1,77 @@
 # requires /.gitlab/base.yml
 
+.administration-node-cache: &administration-node-cache
+  key:
+    files:
+      - src/Administration/Resources/app/administration/package-lock.json
+  paths:
+    - src/Administration/Resources/app/administration/node_modules/
+  policy: push
+
+.administration-eslint-cache: &administration-eslint-cache
+  key: 'eslint-administration'
+  paths:
+    - src/Administration/Resources/app/administration/.eslintcache
+  policy: push
+
+.administration-stylelint-cache: &administration-stylelint-cache
+  key: 'stylelint-administration'
+  paths:
+    - src/Administration/Resources/app/administration/.stylelintcache
+  policy: push
+
+.administration-jest-cache: &administration-jest-cache
+  key: 'jestcache-administration'
+  paths:
+    - src/Administration/Resources/app/administration/.jestcache
+  policy: push
+
+.storefront-node-cache: &storefront-node-cache
+  key:
+    files:
+      - src/Storefront/Resources/app/storefront/package-lock.json
+  paths:
+    - src/Storefront/Resources/app/storefront/node_modules/
+  policy: push
+
+.storefront-eslint-cache: &storefront-eslint-cache
+  key: 'eslint-storefront'
+  paths:
+    - src/Storefront/Resources/app/storefront/.eslintcache
+  policy: push
+
+.storefront-stylelint-cache: &storefront-stylelint-cache
+  key: 'stylelint-storefront'
+  paths:
+    - src/Storefront/Resources/app/storefront/.stylelintcache
+  policy: push
+
+.storefront-jest-cache: &storefront-jest-cache
+  key: 'jestcache-storefront'
+  paths:
+    - src/Storefront/Resources/app/storefront/.jestcache
+  policy: push
+
+.php-ecs: &php-ecs
+  key: 'php-ecs'
+  paths:
+    - var/cache/cs_fixer
+  policy: push
+
+.phpstan-vendor: &phpstan-vendor
+  key: 'phpstan-vendor'
+  paths:
+    - vendor
+    - vendor-bin
+  policy: push
+
+.phpstan-result-cache: &phpstan-result-cache
+  key: 'phpstan-result-cache'
+  paths:
+    - var/cache/phpstan
+  policy: push
+
+
 Danger:
     extends: .base-no-setup
     stage: lint
@@ -26,11 +98,10 @@ ESLint (Administration):
         - changes:
               - 'src/Administration/Resources/app/administration/**/*'
     cache:
-      key:
-        files:
-          - src/Administration/Resources/app/administration/package-lock.json
-      paths:
-        - src/Administration/Resources/app/administration/node_modules/
+      - <<: *administration-node-cache
+        policy: pull
+      - <<: *administration-eslint-cache
+        policy: pull
     script:
         - '[[ -d src/Administration/Resources/app/administration/node_modules/ ]] || npm --prefix src/Administration/Resources/app/administration/ ci'
         - cd src/Administration/Resources/app/administration
@@ -55,14 +126,13 @@ ESLint (Storefront):
         - changes:
               - 'src/Storefront/Resources/app/storefront/**/*'
     cache:
-      key:
-        files:
-          - src/Storefront/Resources/app/storefront/package-lock.json
-      paths:
-        - src/Storefront/Resources/app/storefront/node_modules/
+      - <<: *storefront-node-cache
+        policy: pull
+      - <<: *storefront-eslint-cache
+        policy: pull
     script:
+        - '[[ -d src/Storefront/Resources/app/storefront/node_modules/ ]] || npm --prefix src/Storefront/Resources/app/storefront/ ci'
         - cd src/Storefront/Resources/app/storefront
-        - npm clean-install
         - npm run --silent lint:js -- --format junit --output-file $CI_PROJECT_DIR/eslint.junit.xml
     after_script:
         - grep 'failure message' eslint.junit.xml
@@ -84,11 +154,10 @@ Stylelint (Administration):
               - 'src/Administration/Resources/app/administration/.stylelintrc'
               - 'src/Administration/Resources/app/administration/**/*.scss'
     cache:
-      key:
-        files:
-          - src/Administration/Resources/app/administration/package-lock.json
-      paths:
-        - src/Administration/Resources/app/administration/node_modules/
+      - <<: *storefront-node-cache
+        policy: pull
+      - <<: *storefront-stylelint-cache
+        policy: pull
     script:
         - '[[ -d src/Administration/Resources/app/administration/node_modules/ ]] || npm --prefix src/Administration/Resources/app/administration/ ci'
         - cd src/Administration/Resources/app/administration
@@ -108,11 +177,10 @@ Stylelint (Storefront):
               - 'src/Storefront/Resources/app/storefront/stylelint.config.js'
               - 'src/Storefront/Resources/app/storefront/**/*.scss'
     cache:
-      key:
-        files:
-          - src/Storefront/Resources/app/storefront/package-lock.json
-      paths:
-        - src/Storefront/Resources/app/storefront/node_modules/
+      - <<: *storefront-node-cache
+        policy: pull
+      - <<: *storefront-stylelint-cache
+        policy: pull
     script:
         - '[[ -d src/Storefront/Resources/app/storefront/node_modules/ ]] || npm --prefix src/Storefront/Resources/app/storefront/ ci'
         - cd src/Storefront/Resources/app/storefront
@@ -138,12 +206,13 @@ PHP static analysis:
               - phpstan-baseline.neon
               - '**/*.php'
     cache:
-        key: 'phpstan_cache'
-        paths:
-            - var/cache/phpstan
+      - <<: *phpstan-vendor
+        policy: pull
+      - <<: *phpstan-result-cache
         policy: pull
     before_script:
         - composer update --no-interaction
+        - composer update
     script:
         - composer run phpstan -- --error-format=gitlab --no-progress | tee phpstan-report.json
     artifacts:
@@ -155,10 +224,10 @@ PHP static analysis (push cache):
     rules:
         - if: '$CI_COMMIT_BRANCH == "trunk"'
     cache:
-        key: 'phpstan_cache'
-        paths:
-            - var/cache/phpstan
-        policy: pull-push
+      - <<: *phpstan-vendor
+        policy: push
+      - <<: *phpstan-result-cache
+        policy: push
 
 PHP lint:
     extends: .base-no-setup
@@ -174,8 +243,11 @@ PHP lint:
               - 'changelog/**/*.md'
               - 'src/**/snippet/**/*.json'
               - '**/*.php'
+    cache:
+      - <<: *php-ecs
+        policy: pull
     before_script:
-        - composer update --no-interaction
+        - composer install --no-interaction
     script:
         - composer run ecs -- --no-progress-bar
         - composer run lint:changelog
@@ -211,3 +283,67 @@ NPM CI:
             - "12-alpine"
             - "14-alpine"
             - "16-alpine"
+
+## Caching
+
+Administration Cache (Push):
+  extends: .base-no-setup
+  stage: lint
+  image: shopware/development:8.1-composer-2
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "trunk"'
+  cache:
+    - <<: *administration-node-cache
+      policy: push
+    - <<: *administration-eslint-cache
+      policy: push
+    - <<: *administration-stylelint-cache
+      policy: push
+    - <<: *administration-jest-cache
+      policy: push
+  before_script: []
+  script:
+    - composer install --no-scripts
+    - bin/console framework:schema -s 'entity-schema' $ADMIN_PATH/test/_mocks_/entity-schema.json 2>/dev/null
+    - npm --prefix src/Administration/Resources/app/administration ci
+    - cd src/Administration/Resources/app/administration
+    - npm run lint
+    - npm run lint:scss
+    - npm run unit -- --silent
+
+Storefront Cache (Push):
+  extends: .base-no-setup
+  stage: lint
+  image: node:lts-alpine
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "trunk"'
+  cache:
+    - <<: *storefront-node-cache
+      policy: push
+    - <<: *storefront-eslint-cache
+      policy: push
+    - <<: *storefront-stylelint-cache
+      policy: push
+    - <<: *storefront-jest-cache
+      policy: push
+  before_script: []
+  script:
+    - npm --prefix src/Storefront/Resources/app/storefront ci
+    - cd src/Storefront/Resources/app/storefront
+    - npm run lint
+    - npm run lint:scss
+    - npm --prefix "$STOREFRONT_PATH" run unit -- --silent
+
+PHP Cache (Push):
+  extends: .base-no-setup
+  stage: lint
+  image: shopware/development:8.1-composer-2
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "trunk"'
+  cache:
+    - <<: *php-ecs
+      policy: push
+  before_script: []
+  script:
+    - composer install
+    - composer run ecs
