--- a/src/Core/composer.json
+++ b/src/Core/composer.json
@@ -87,50 +87,48 @@
         "shopware/conflicts": "*",
         "sroze/messenger-enqueue-transport": "0.4.0",
         "superbalist/flysystem-google-storage": "~7.2.2",
-        "symfony/asset": "~5.4.0",
-        "symfony/cache": "~5.4.0",
-        "symfony/cache-contracts": "v2.5.2",
-        "symfony/config": "~5.4.0",
-        "symfony/console": "~5.4.1",
-        "symfony/debug-bundle": "~5.4.0",
-        "symfony/dependency-injection": "~5.4.1",
-        "symfony/deprecation-contracts": "2.2.0",
-        "symfony/dotenv": "~5.4.5",
-        "symfony/error-handler": "~5.4.1",
-        "symfony/event-dispatcher": "~5.4.0",
-        "symfony/event-dispatcher-contracts": "2.2.0",
-        "symfony/filesystem": "~5.4.0",
-        "symfony/finder": "~5.4.0",
-        "symfony/framework-bundle": "~5.4.1",
-        "symfony/http-foundation": "~5.4.1",
-        "symfony/http-kernel": "~5.4.2",
-        "symfony/inflector": "~5.4.0",
-        "symfony/mailer": "~5.4.0",
-        "symfony/messenger": "~5.4.0",
-        "symfony/mime": "~5.4.0",
-        "symfony/monolog-bridge": "~5.4.0",
-        "symfony/monolog-bundle": "3.6.0",
-        "symfony/options-resolver": "~5.4.0",
-        "symfony/polyfill-php80": "~1.23.1",
-        "symfony/polyfill-php81": "~v1.23.0",
-        "symfony/process": "~5.4.0",
-        "symfony/property-access": "~5.4.0",
-        "symfony/property-info": "~5.4.0",
-        "symfony/proxy-manager-bridge": "~5.4.0",
-        "symfony/psr-http-message-bridge": "2.1.0",
-        "symfony/rate-limiter": "~5.4.0",
-        "symfony/routing": "~5.4.0",
-        "symfony/security-core": "~5.4.0",
-        "symfony/serializer": "~5.4.0",
-        "symfony/service-contracts": "2.2.0",
-        "symfony/stopwatch": "~5.4.0",
-        "symfony/translation": "~5.4.1",
-        "symfony/translation-contracts": "2.3.0",
-        "symfony/twig-bridge": "~5.4.0",
-        "symfony/twig-bundle": "~5.4.0",
-        "symfony/validator": "~5.4.1",
-        "symfony/var-exporter": "~5.4.0",
-        "symfony/yaml": "~5.4.0",
+        "symfony/asset": "~6.1.0",
+        "symfony/cache": "~6.1.0",
+        "symfony/cache-contracts": "~3.1.0",
+        "symfony/config": "~6.1.0",
+        "symfony/console": "~6.1.0",
+        "symfony/debug-bundle": "~6.1.0",
+        "symfony/dependency-injection": "~6.1.0",
+        "symfony/deprecation-contracts": "~3.1.0",
+        "symfony/dotenv": "~6.1.0",
+        "symfony/error-handler": "~6.1.0",
+        "symfony/event-dispatcher": "~6.1.0",
+        "symfony/event-dispatcher-contracts": "~3.1.0",
+        "symfony/filesystem": "~6.1.0",
+        "symfony/finder": "~6.1.0",
+        "symfony/framework-bundle": "~6.1.0",
+        "symfony/http-foundation": "~6.1.0",
+        "symfony/http-kernel": "~6.1.0",
+        "symfony/inflector": "~6.1.0",
+        "symfony/mailer": "~6.1.0",
+        "symfony/messenger": "~6.1.0",
+        "symfony/mime": "~6.1.0",
+        "symfony/monolog-bridge": "~6.1.0",
+        "symfony/monolog-bundle": "~3.8.0",
+        "symfony/options-resolver": "~6.1.0",
+        "symfony/process": "~6.1.0",
+        "symfony/property-access": "~6.1.0",
+        "symfony/property-info": "~6.1.0",
+        "symfony/proxy-manager-bridge": "~6.1.0",
+        "symfony/psr-http-message-bridge": "~2.1.3",
+        "symfony/rate-limiter": "~6.1.0",
+        "symfony/routing": "~6.1.0",
+        "symfony/security-core": "~6.1.0",
+        "symfony/serializer": "~6.1.0",
+        "symfony/service-contracts": "~3.1.0",
+        "symfony/stopwatch": "~6.1.0",
+        "symfony/translation": "~6.1.0",
+        "symfony/translation-contracts": "~3.1.0",
+        "symfony/twig-bridge": "~6.1.0",
+        "symfony/twig-bundle": "~6.1.0",
+        "symfony/validator": "~6.1.0",
+        "symfony/var-exporter": "~6.1.0",
+        "symfony/yaml": "~6.1.0",
         "true/punycode": "2.1.1",
         "twig/intl-extra": "~3.3.5",
         "twig/string-extra": "~3.3.5",
@@ -151,11 +149,11 @@
         "phpunit/phpunit": "~9.5.17",
         "phpunit/php-code-coverage": "~9.2.14",
         "smalot/pdfparser": "~0.14.0",
-        "symfony/browser-kit": "~5.4.0",
+        "symfony/browser-kit": "~6.1.0",
         "symfony/phpunit-bridge": "~6.1.0",
-        "symfony/var-dumper": "~5.4.0",
-        "symfony/web-profiler-bundle": "~5.4.0",
-        "symfony/dom-crawler": "~5.4.0",
+        "symfony/var-dumper": "~6.1.0",
+        "symfony/web-profiler-bundle": "~6.1.0",
+        "symfony/dom-crawler": "~6.1.0",
         "brianium/paratest": "^6.2"
     },
     "config": {
