--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -57,7 +57,7 @@
     "apexcharts": "3.35.3",
     "app-module-path": "2.2.0",
     "axios": "0.27.2",
-    "babel-jest": "27.5.1",
+    "babel-jest": "29.0.0",
     "babel-plugin-require-context-hook": "1.0.0",
     "bottlejs": "2.0.1",
     "cookie-storage": "6.1.0",
@@ -69,6 +69,8 @@
     "flatpickr": "4.6.13",
     "fork-ts-checker-webpack-plugin": "6.5.2",
     "fs-extra": "^10.1.0",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-jasmine2": "29.3.1",
     "lighthouse": "9.6.3",
     "lodash": "4.17.21",
     "md5-es": "1.8.2",
@@ -79,6 +81,7 @@
     "puppeteer": "13.7.0",
     "stylelint-junit-formatter": "0.2.2",
     "terser-webpack-plugin": "4.2.3",
+    "ts-jest": "29.0.3",
     "ts-loader": "8.1.0",
     "twig": "1.13.3",
     "uuid": "8.3.2",
@@ -156,7 +159,7 @@
     "html-webpack-plugin": "4.5.2",
     "http-proxy-middleware": "0.19.2",
     "inject-loader": "4.0.1",
-    "jest": "27.5.1",
+    "jest": "29.3",
     "jest-fail-on-console": "3.0.1",
     "jest-junit": "14.0.1",
     "jsdoc": "3.6.10",
