--- a/.github/workflows/02-unit.yml
+++ b/.github/workflows/02-unit.yml
@@ -13,7 +13,7 @@ jobs:
     container: "shopware/development:${{ matrix.php-version }}-composer-2"
     strategy:
       matrix:
-        php-version: ["8.1"]
+        php-version: ["8.1", "8.2"]
     env:
       TEST_SUITES: 'administration storefront checkout content framework profiling migration system elasticsearch docs unit integration migration-tests'
       APP_ENV: test
