--- a/.gitlab/templates/plugin.yml
+++ b/.gitlab/templates/plugin.yml
@@ -125,7 +125,7 @@ default:
         - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.shopware.com/shopware/6/product/platform.git . --branch $PLATFORM_BRANCH
         - mkdir -p custom/plugins || true
         - unzip -q /tmp/plugin.zip -d custom/plugins/$PLUGIN_NAME
-        - composer install --quiet --no-interaction
+        - composer install --no-interaction
         - mkdir -p config/jwt || true
         - bin/console system:generate-jwt || true
         - bin/console system:install --drop-database --basic-setup --force >/dev/null
@@ -165,7 +165,7 @@ default:
 build zip:
     stage: build
     image:
-        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.13
+        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.17
         entrypoint: [""]
     rules:
         - exists:
@@ -194,7 +194,7 @@ build zip:
 validate zip:
     stage: test
     image:
-        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.13
+        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.17
         entrypoint: [""]
     variables:
         GIT_STRATEGY: none
@@ -454,7 +454,7 @@ upload zip to store:
         name: account.shopware.com
         url: 'https://account.shopware.com'
     image:
-        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.13
+        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.17
         entrypoint: [""]
     variables:
         GIT_STRATEGY: none
