--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,7 @@
         "psr/http-factory": "1.0.1",
         "psr/http-message": "1.0.1",
         "psr/log": "1.1.2",
-        "scssphp/scssphp": "1.10.0",
+        "scssphp/scssphp": "v1.11.0",
         "sensio/framework-extra-bundle": "~6.2.1",
         "shopware/conflicts": "*",
         "sroze/messenger-enqueue-transport": "0.4.0",
