NEXT-18985 - Add missing customer rules to the rule builder

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -300,3 +300,8 @@ services:
         class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Type\CollectionHasSpecifyingExtension
         tags:
             - phpstan.typeSpecifier.methodTypeSpecifyingExtension
+
+    -
+            class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\RuleConditionHasRuleConfigRule
+            tags:
+                - phpstan.rules.rule
