NEXT-24016 - Deprecate message handler for 6.5

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -272,6 +272,11 @@ services:
             - phpstan.rules.rule
 
     -
+        class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\FinalClassRule
+        tags:
+            - phpstan.rules.rule
+
+    -
         class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\Tests\MockingSimpleObjectsNotAllowedRule
         tags:
             - phpstan.rules.rule
