NEXT-24228 - Disable BC-Check

--- a/.gitlab/stages/10-lint.yml
+++ b/.gitlab/stages/10-lint.yml
@@ -162,7 +162,8 @@ PHP lint:
         - composer run ecs -- --no-progress-bar
         - composer run lint:changelog
         - composer run lint:snippets
-        - composer run bc-check
+        # TODO: Re-Enable BC-Check ASAP
+        # - composer run bc-check
 
 NPM CI:
     extends: .base-no-setup
