--- a/.github/workflows/01-php-lint.yml
+++ b/.github/workflows/01-php-lint.yml
@@ -33,6 +33,7 @@ jobs:
         composer run phpstan -- --error-format=gitlab --no-progress | tee phpstan-report.json
         composer run lint:changelog
         composer run lint:snippets
-        git remote add bc-checker-upstream https://github.com/shopware/platform.git
-        git fetch bc-checker-upstream
-        composer run bc-check
+        # TODO: Re-Enable BC-Check ASAP
+        # git remote add bc-checker-upstream https://github.com/shopware/platform.git
+        # git fetch bc-checker-upstream
+        # composer run bc-check
