--- a/.github/workflows/01-php-lint.yml
+++ b/.github/workflows/01-php-lint.yml
@@ -33,7 +33,7 @@ jobs:
         composer run phpstan -- --error-format=gitlab --no-progress | tee phpstan-report.json
         composer run lint:changelog
         composer run lint:snippets
-        # TODO: Re-Enable BC-Check ASAP
+        # TODO: Re-Enable BC-Check after 6.5 RC release
         # git remote add bc-checker-upstream https://github.com/shopware/platform.git
         # git fetch bc-checker-upstream
         # composer run bc-check
